--- a/abc_login/manage/style.css
+++ b/abc_login/manage/style.css
@@ -17,7 +17,7 @@
  ---------------------------------------- */
 #container {
 	border:1px;
-	background: #7f7f7f url('../_images/') no-repeat;
+	background: #7f7f7f url('../images/') no-repeat;
 }
 
 #navi {
